--- a/generator/templates/generator/password.html
+++ b/generator/templates/generator/password.html
@@ -1,3 +1,16 @@
-<h1>pass</h1>
+{% extends 'generator/layout.html' %}
 
-{{password}}
+{%block content%}
+
+<div class="col-md-4 offset-md-4">
+    <div class="card card-body bg-dark text-center">
+        <h1 class="h3">Password</h1>
+        <p>{{password}}</p>
+    </div>
+</div>
+
+
+
+
+
+{%endblock%}
