--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -1,29 +1,45 @@
-<form action="{% url 'password' %}">
-    <h1>Password Generator</h1>
-    <label for="lenght">Select Lenght Password</label> 
-    <!-- El for lenght es para el id lenght-->
-    <select name="lenght" id="lenght">
-        <option value="5">5 Characters</option>
-        <!-- Emmet option{$ characters}*7 -->
-        <option value="6">6 characters</option> 
-        <option value="7">7 characters</option>
-        <option value="8">8 characters</option>
-        <option value="9">9 characters</option>
-        <option value="10">10 characters</option>
-        <option value="11">11 characters</option>
-        <option value="12">12 characters</option>
-    </select>
+{% extends 'generator/layout.html' %}
 
-    <label for="uppercase">Uppercase</label>
-    <input type="checkbox" name="uppercase" id="uppercase">
+{%block content%}
 
-    <label for="special">Special Characters</label>
-    <input type="checkbox" name="special" id="special">
 
-    <label for="numbers">Numbers</label>
-    <input type="checkbox" name="numbers" id="numbers">
+<!-- Ocupa 1/3 de la pantalla -->
+<div class="col-md-4 offset-md-4"> 
+    <form action="{% url 'password' %}"  class="card-body p-5" style="background-color: #121212;">
+        <h1 class="h4">Password Generator</h1>
+        <label for="lenght">Select Password Lenght</label> 
+        <!-- El for lenght es para el id lenght-->
+        <select name="lenght" id="lenght" class="form-control">
+            <option value="5">5 Characters</option>
+            <!-- Emmet option{$ characters}*7 -->
+            <option value="6">6 characters</option> 
+            <option value="7">7 characters</option>
+            <option value="8">8 characters</option>
+            <option value="9">9 characters</option>
+            <option value="10">10 characters</option>
+            <option value="11">11 characters</option>
+            <option value="12">12 characters</option>
+        </select>
+    
+        <div class="form-check form-switch my-2">
+            <label for="uppercase" class="form-check-label">Uppercase</label>
+            <input type="checkbox" name="uppercase" id="uppercase" class="form-check-input">
+        </div>
+        <div class="form-check form-switch my-2">
+            <label for="special" class="form-check-label">Special Characters</label>
+            <input type="checkbox" name="special" id="special" class="form-check-input">
+        </div>
+        <div class="form-check form-switch my-2">
+            <label for="numbers" class="form-check-label">Numbers</label>
+            <input type="checkbox" name="numbers" id="numbers" class="form-check-input">
+        </div>
+    
+        
+    
+        <button class="btn btn-primary">Generate Password</button>
+        <!-- Esto hace una peticion GET al servidor -->
+        <!-- Yo quiero que envie la info a una url nueva -->
+    </form>
+</div>
 
-    <button>Generate Password</button>
-    <!-- Esto hace una peticion GET al servidor -->
-    <!-- Yo quiero que envie la info a una url nueva -->
-</form>
+{%endblock%}
